--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ p1 {
 }
 
 div1 {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+  padding-top: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
 }
